Setting #1 - Update Gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,7 @@ DerivedData/
 !default.mode2v3
 *.perspectivev3
 !default.perspectivev3
+*/UserInterfaceState.xcuserstate
 
 ## Obj-C/Swift specific
 *.hmap
