--- a/Oripresso/Info.plist
+++ b/Oripresso/Info.plist
@@ -2,6 +2,13 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>UIAppFonts</key>
+	<array>
+		<string>NanumSquareRoundB</string>
+		<string>NanumSquareRoundEB</string>
+		<string>NanumSquareRoundL</string>
+		<string>NanumSquareRoundR</string>
+	</array>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
