--- a/Oripresso/Info.plist
+++ b/Oripresso/Info.plist
@@ -16,9 +16,7 @@
 					<key>UISceneDelegateClassName</key>
 					<string>$(PRODUCT_MODULE_NAME).SceneDelegate</string>
 					<key>UISceneStoryboardFile</key>
-					<string>OrderList</string>
-					<key>UISceneClassName</key>
-					<string></string>
+					<string>MainView</string>
 				</dict>
 			</array>
 		</dict>
